# python-adv-Mera

homeworks/: database  database2  docker  git  oop  oop2
homeworks/django/: forms-and-cart  orm-practice-2
homeworks/docker_hw6/: app.py  docker-compose.yml
homeworks/flask/: flask2  flask3  flask4  flask5  flask6  intro
homeworks/flask_hw8/: app.py  docker-compose.yml
homeworks/oop2_hw3/: main.py  oop2
homeworks/oop_hw2/: main.py  task
homeworks/sql_hw4/: school2.sql
homeworks/sql_hw5/: hw5_sql.practice.odt  hw5_sql.practice.txt  school.sql
lections/database2/: commands  school.sql
lections/flask-template/: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
lections/flask-template/app/: __init__.py  utils.py
lections/flask-template/app/controllers/: __init__.py  recipient.py
lections/flask-template/app/forms/: __init__.py  auth.py  upload.py
lections/flask-template/app/models/: __init__.py  recipient.py  user.py
lections/flask-template/app/static/css/: main.css
lections/flask-template/app/templates/: about.html
lections/flask-template/app/templates/auth/: login.html  password_reset.html  reset_password.html
lections/flask-template/app/templates/common/: header.html
lections/flask-template/app/templates/recipient/: list.html
lections/flask-template/app/templates/upload/: file.html
lections/flask-template/app/views/: __init__.py  auth.py  recipient.py  upload.py
lections/flask-template/docker/: Dockerfile
lections/flask-template/migrations/versions/: d07f88fd5862_.py  d8c0582cba35_.py
(+178 files in other folders)
