[tool.poetry]
name = "flask-template"
version = "0.1.0"
description = "Simple Flask usefull template"
authors = ["Oleksandr Vorobei <oleksandr.vorobei@anvileight.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Migrate = "^4.0.0"
flask-sqlalchemy = "^3.0.2"
Flask-Login = "^0.6.2"
psycopg2 = "^2.9.5"
SQLAlchemy = "^1.4.44"
python-dotenv = "^0.21.0"
email-validator = "^1.3.0"
flask-wtf = "^1.0.1"
werkzeug = "^2.2.2"
click = "^8.1.3"
markupsafe = "^2.1.1"
flask-mail = "^0.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
